crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__hoisted_fn_signal_in_loop.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 934
expression: output
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0");
//
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT) ==
export const App_component_ckEPmXZlub0 = () => {
  const data = { value: [
    { value: { id: 1, selected: { value: true } } },
    { value: { id: 2, selected: { value: false } } },
    { value: { id: 3, selected: { value: true } } }
  ]};
  
  return (
    <table>
      {data.value.map((row) => {
        return (
          <tr
            key={row.value.id}
            class={row.value.selected.value ? "danger" : ""}
          >
            <td>{row.value.id}</td>
          </tr>
        );
      })}
    </table>
  );
};
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    66,
    563
  ]
}
*/
== DIAGNOSTICS ==
[]
