crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__impure_template_fns.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 935
expression: output
---
============================= test.ts ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
//
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export default componentQrl(q_test_component_LUXeXe0DQrg);
export { useFoo as _auto_useFoo };
============================= test.tsx_test_component_LUXeXe0DQrg.ts (ENTRY POINT) ==
import { useSignal } from "@qwik.dev/core";
const useFoo = (count) => {
	const tag = (s) => {
		const value = typeof s === "string" ? s : s[0];
		return `${value}-${count.value}`;
	};
	return tag;
};
export const test_component_LUXeXe0DQrg = () => {
			const count = useSignal(0);
			const foo = useFoo(count);
			return (
				<>
					<p>{foo("test")}</p>
					<p>{foo`test`}</p>
					<button onClick$={() => count.value++}>Count up</button>
				</>
			);
		};
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    245,
    474
  ]
}
*/
== DIAGNOSTICS ==
[]
