crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__inlined_qrl_uses_identifier_reference_when_hoisted_snapshot.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
============================= test.js ==
import { _noopQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$ } from "@qwik.dev/core";
const q__u6BtPnK76q4 = /*#__PURE__*/ _noopQrl("_u6BtPnK76q4");
q__u6BtPnK76q4.s(() => {
	return <div>Hello</div>;
});
export const App = componentQrl(q__u6BtPnK76q4);

== DIAGNOSTICS ==
[]
