crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__issue_117.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
============================= project/test.tsx ==
export const cache = patternCache[cacheKey] || (patternCache[cacheKey] = {});
== DIAGNOSTICS ==
[]
