crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__issue_150.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Greeter_component_1_krCndSwhX4U = /*#__PURE__*/ qrl(()=>import("./test.tsx_Greeter_component_1_krCndSwhX4U"), "Greeter_component_1_krCndSwhX4U");
const q_d_wKNFJEIQVUA = /*#__PURE__*/ qrl(()=>import("./test.tsx_d_wKNFJEIQVUA"), "d_wKNFJEIQVUA");
//
export const Greeter = /*#__PURE__*/ componentQrl(q_Greeter_component_1_krCndSwhX4U);

============================= test.tsx_Greeter_component_1_krCndSwhX4U.js (ENTRY POINT) ==
import { $ } from "@qwik.dev/core";
import { hola } from "sdfds";
export const Greeter_component_1_krCndSwhX4U = () => {
	const stuff = useStore();
	return $(() => {
		return (
			<div
				class={{
					'foo': true,
					'bar': stuff.condition,
					'baz': hola ? 'true' : 'false',
				}}
			/>
		)
	});
};
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_1_krCndSwhX4U",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_1",
  "hash": "krCndSwhX4U",
  "canonicalFilename": "test.tsx_Greeter_component_1_krCndSwhX4U",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    103,
    307
  ]
}
*/
============================= test.tsx_Greeter_component_n7HuG2hhU0Q.js (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
import { hola } from "sdfds";
export const Greeter_component_n7HuG2hhU0Q = () => {
		return (
			<div
				class={{
					'foo': true,
					'bar': stuff.condition,
					'baz': hola ? 'true' : 'false',
				}}
			/>
		)
	};
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_n7HuG2hhU0Q",
  "entry": null,
  "displayName": "test.tsx_Greeter_component",
  "hash": "n7HuG2hhU0Q",
  "canonicalFilename": "test.tsx_Greeter_component_n7HuG2hhU0Q",
  "path": "",
  "extension": "js",
  "parent": "Greeter_component_1_krCndSwhX4U",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "captureNames": [
    "stuff"
  ],
  "loc": [
    157,
    303
  ]
}
*/
============================= test.tsx_d_wKNFJEIQVUA.js (ENTRY POINT) ==
export const d_wKNFJEIQVUA = () => console.log("thing");

/*
{
  "origin": "test.tsx",
  "name": "d_wKNFJEIQVUA",
  "entry": null,
  "displayName": "test.tsx_d",
  "hash": "wKNFJEIQVUA",
  "canonicalFilename": "test.tsx_d_wKNFJEIQVUA",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    320,
    347
  ]
}
*/
== DIAGNOSTICS ==
[]
