crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__issue_5008.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 940
expression: output
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { Fragment } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(() => import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
export default /*#__PURE__*/ componentQrl(q_test_component_LUXeXe0DQrg);

============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT) ==
import { useStore } from "@qwik.dev/core";
export const test_component_LUXeXe0DQrg = () => {
		const store = useStore([{ value: 0 }]);
		return (
			<>
			<button onClick$={() => store[0].value++}>+1</button>
			{store.map(function (v, idx) {
				return <div key={"fn_" + idx}>Function: {v.value}</div>;
			})}
			{store.map((v, idx) => (
				<div key={"arrow_" + idx}>Arrow: {v.value}</div>
			))}
			</>
		);
		};
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    76,
    417
  ]
}
*/
== DIAGNOSTICS ==
[]
