crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__issue_964.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$ } from "@qwik.dev/core";
const q__u6BtPnK76q4 = /*#__PURE__*/ qrl(() => import("./test.tsx__u6BtPnK76q4"), "_u6BtPnK76q4");
export const App = /*#__PURE__*/ componentQrl(q__u6BtPnK76q4);

============================= test.tsx__u6BtPnK76q4.js (ENTRY POINT) ==
export const _u6BtPnK76q4 = () => {
	console.log(function*(lo: any, t: any) {
	console.log(yield (yield lo)(t.href).then((r) => r.json()));
	});

	return <p>Hello Qwik</p>;
};
/*
{
  "origin": "test.tsx",
  "name": "_u6BtPnK76q4",
  "entry": null,
  "displayName": "test.tsx_",
  "hash": "u6BtPnK76q4",
  "canonicalFilename": "test.tsx__u6BtPnK76q4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    66,
    224
  ]
}
*/
== DIAGNOSTICS ==
[]
