crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__lib_mode_fn_signal.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.ts ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Counter_component_zTmRHlL09Gg = /*#__PURE__*/ qrl(()=>import("./test.tsx_Counter_component_zTmRHlL09Gg"), "Counter_component_zTmRHlL09Gg");
//
export const Counter = /*#__PURE__*/ componentQrl(q_Counter_component_zTmRHlL09Gg);

============================= test.tsx_Counter_component_div_p_button_q_e_click_Pq1pmfmJWUI.ts (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
export const Counter_component_div_p_button_q_e_click_Pq1pmfmJWUI = () => {
    const count = _captures[0];
    return count.value++;
};

/*
{
  "origin": "test.tsx",
  "name": "Counter_component_div_p_button_q_e_click_Pq1pmfmJWUI",
  "entry": null,
  "displayName": "test.tsx_Counter_component_div_p_button_q_e_click",
  "hash": "Pq1pmfmJWUI",
  "canonicalFilename": "test.tsx_Counter_component_div_p_button_q_e_click_Pq1pmfmJWUI",
  "path": "",
  "extension": "ts",
  "parent": "Counter_component_zTmRHlL09Gg",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "count"
  ],
  "loc": [
    212,
    231
  ]
}
*/
============================= test.tsx_Counter_component_zTmRHlL09Gg.ts (ENTRY POINT) ==
export const Counter_component_zTmRHlL09Gg = () => {
			const count = useSignal(0);

			return (
				<div>
					<p>Count: {count.value}</p>
					<p>
						<button onClick$={() => count.value++}>Increment</button>
					</p>
				</div>
			);
		};
/*
{
  "origin": "test.tsx",
  "name": "Counter_component_zTmRHlL09Gg",
  "entry": null,
  "displayName": "test.tsx_Counter_component",
  "hash": "zTmRHlL09Gg",
  "canonicalFilename": "test.tsx_Counter_component_zTmRHlL09Gg",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    73,
    283
  ]
}
*/
== DIAGNOSTICS ==
[]
