crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__moves_captures_when_possible.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$, useSignal, $ } from "@qwik.dev/core";
const q_Test_component_qJXYteHpGTQ = /*#__PURE__*/ qrl(() => import("./test.tsx_Test_component_qJXYteHpGTQ"), "Test_component_qJXYteHpGTQ");
export const Test = /*#__PURE__*/ componentQrl(q_Test_component_qJXYteHpGTQ);

============================= test.tsx_Test_component_qJXYteHpGTQ.js (ENTRY POINT) ==
import { useSignal } from "@qwik.dev/core";
export const Test_component_qJXYteHpGTQ = () => {
			const sig = useSignal(0);
			const _ref = {};
			_ref.foo = useSignal('_ref.foo');
			const { foo } = _ref;
			const _ref = {};
			_ref.bar = useSignal('_ref.bar');
			const { bar } = _ref;
			return <button onClick$={() => sig.value++} onDblClick$={() => foo.value+=sig.value} onHover$={() => sig.value+=bar.value}>{sig}</button>;
		};
/*
{
  "origin": "test.tsx",
  "name": "Test_component_qJXYteHpGTQ",
  "entry": null,
  "displayName": "test.tsx_Test_component",
  "hash": "qJXYteHpGTQ",
  "canonicalFilename": "test.tsx_Test_component_qJXYteHpGTQ",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    85,
    345
  ]
}
*/
== DIAGNOSTICS ==
[]
